--- a/style.scss
+++ b/style.scss
@@ -400,6 +400,7 @@ main {
       form {
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
         input {
           border: none;
           border-bottom: 1px solid rgba(0, 0, 0, 0.651);
